# rit

./: Cargo.toml  README.md
src/: errors.rs  main.rs  types.rs
src/cmd/: cat_file.rs  hash_object.rs  init.rs  ls_tree.rs
