[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.23", features = ["derive"]}
flate2 = "1.0.34"                                # compression
glob = "0.3.2"
hex = "0.4.3"
sha1 = "0.10.6"
tempfile = "3.14.0"
thiserror = "2.0.9"
